--- a/ch4 相机模型与非线性优化/作业/曾是少年-第四章作业.md
+++ b/ch4 相机模型与非线性优化/作业/曾是少年-第四章作业.md
@@ -149,18 +149,28 @@ for (int v = 0; v < left.rows; v++)
 
 ### 1. 矩阵$A \in R^{N\times N}$，那么d(Ax)/dx 是什么？
 
-答：$x$是$n\times1$列向量
+答：$x$是$n\times1$列向量 
 
 令矩阵$A = [a_1,a_2,...,a_n]$ , $A = [a_1';a_2';...;a_n']$
 $$
 \begin{aligned}
-\frac{\partial{Ax}}{\partial x} &= 
+\frac{\partial{{Ax}}}{\partial x} &= 
 \left[
 \begin{array}{ccc}
-\frac{\partial{Ax}}{\partial x_1}&
-\frac{\partial{Ax}}{\partial x_2}&
+\frac{\partial{{Ax}_1}}{\partial x_1}&
+\frac{\partial{Ax}_2}{\partial x_1}&
 ...&
-\frac{\partial{Ax}}{\partial x_n}
+\frac{\partial{Ax}_n}{\partial x_1}\\
+
+\frac{\partial{{Ax}_1}}{\partial x_2}&
+\frac{\partial{Ax}_2}{\partial x_2}&
+...&
+\frac{\partial{Ax}_n}{\partial x_2}\\
+... & ... &...&...\\
+\frac{\partial{{Ax}_1}}{\partial x_n}&
+\frac{\partial{Ax}_2}{\partial x_n}&
+...&
+\frac{\partial{Ax}_n}{\partial x_n}\\
 
 \end{array}
 \right]
@@ -169,51 +179,26 @@ $$
 先对x的第i个分量求导：
 $$
 \begin{aligned}
-\frac{\partial{Ax}}{\partial x_i} &= 
-\left[
-\begin{array}{ccc}
-\frac{\partial{a_1'x}}{\partial x_i}\\
-\frac{\partial{a_2'x}}{\partial x_i}\\
-...\\
-\frac{\partial{a_N'x}}{\partial x_i}
-\end{array}
-\right]
- = 
-\left[
-\begin{array}{ccc}
-a_{1i}\\
-a_{2i}\\
-...\\
-a_{Ni}
-\end{array}
-\right]
-= a_i
+\frac{\partial{Ax}_i}{\partial x_k} &= 
+\frac{\partial{a_ix}}{\partial x_k} =a_{ik}
 \end{aligned}
 $$
-
+导入前式有：
 $$
 \begin{aligned}
-\frac{\partial{Ax}}{\partial x} &= 
+\frac{\partial{{Ax}}}{\partial x} &= 
 \left[
 \begin{array}{ccc}
-\frac{\partial{Ax}}{\partial x_1}&
-\frac{\partial{Ax}}{\partial x_2}&
-...&
-\frac{\partial{Ax}}{\partial x_n}
-
+a_{11} & a_{21} & ...& a_{n1}\\
+a_{12} & a_{22} & ... & a_{n2}\\
+... & ... &...&...\\
+a_{1n} & a_{2n} & ...& a_{nn}\\
 \end{array}
 \right]
-\\&= \left[
-\begin{array}{ccc}
-a_1&
-a_2&
-...&
-a_n
-\end{array}
-\right]\\
-&=A
 \end{aligned}
+ = A^T
 $$
+
 
 
 
@@ -414,6 +399,12 @@ $x = [x_0, x_1, x_2, x_3]^T$，令批量观测为$z = [v_1, v_2, v_3, y_1, y_2, 
 
 ### 1. 可以定义矩阵 H，使得批量误差为$e = z - Hx$。请给出此处H的具体形式。
 
+**答**：该线性系统很简单，很容易的写成以下形式
+$$
+v_k = x_k-x_{k-1}  + w_k\\
+y_k= x_k + n_k\\
+$$
+而$z-Hx=e\sim N(0,\Sigma)$, 向量化上式可以得到：
 $$
 H=
 \left[
@@ -438,8 +429,53 @@ $$
 
 其中W 为此问题的信息矩阵，可以从最大似然的概率定义给出。
 
+**答**：$W=diag(Q,R)$
+$$
+\begin{aligned}
+x^{*} &= \arg \max P(x|z) = \arg \max P(z|x)\\
+&=\prod^{3}_{k=1}P(v_k|x_{k-1},x_k)\prod^{3}_{k=1}P(y_k|x_k)
 
+\end{aligned}
+$$
+其中 $P(v_k|x_{k-1},x_k)=N(x_k-x_{k-1},Q) $，
 
+$P(y_k|x_k) = N(x_k,R)$。
+
+误差变量如下：
+$$
+e_{v,k}=x_k-x_{k-1}-v_k, e_{z,k}=y_k-x_k
+$$
+对概率取对数，可以把最小二乘的目标函数化为如下形式：
+$$
+\min\sum^3_{k=1} e^{T}_{v,k}Q^{-1}e_{v,k}+\sum^3_{k=1}e^T_{y,k}R^{-1}e_{y,k}
+$$
+因此$W=diag(Q,Q,Q,R,R,R)$; 即
+$$
+W = 
+\left[
+\begin{array}{ccc}
+Q & 0 & 0 & 0 & 0 & 0\\
+0 & Q & 0 & 0 & 0 & 0\\
+0 & 0 & Q & 0 & 0 & 0\\
+0 & 0 & 0 & R & 0 & 0\\
+0 & 0 & 0 & 0 & R & 0\\
+0 & 0 & 0 & 0 & 0 & R\\
+\end{array}
+\right]
+$$
+此时，最小二乘问题可以写为：
+$$
+x^{*} =\arg \min e^T W^{-1} e
+$$
 
 
 ### 3. 假设所有噪声相互无关，该问题存在唯一的解吗？若有，唯一解是什么？若没有，说明理由。
+
+**答**:	当噪声相互无关的时候，该问题存在唯一解。
+
+因为$Hx=z$ 这个式子中H是6*4矩阵，**方程个数大于未知量个数的方程组**，是一个超定矩阵。而系数矩阵超定时，最小二乘问题可以得到唯一解。
+
+**唯一最小二乘解**如下：
+$$
+x=(H^TH)^{-1}H^Tz
+$$
