--- a/ch5 特征点法视觉里程计/作业/曾是少年-第五章作业.md
+++ b/ch5 特征点法视觉里程计/作业/曾是少年-第五章作业.md
@@ -278,62 +278,56 @@ $$
    提示：用 `AngleAxis` 或 `Sophus::SO3` 计算 $R_Z(π/2)$。
    注：实际当中，可以利用深度值判断哪个解是真正的解，不过本题不作要求，只需打印四个可能的解即可。同时，你也可以验证 $t^∧R$ 应该与 E 只差一个乘法因子，并且与书上的实验结果亦只差一个乘法因子。
 
-答：
+**答**：解答本题的过程在题目中已经很清楚了，需要注意的点如下：
+
+1. Eigen中SVD分解方法
+2. 使用旋转向量对旋转矩阵进行赋值
 
 ```C++
-int main(int argc, char **argv) {
+// 给定Essential矩阵
+Matrix3d E;
+E << -0.0203618550523477, -0.4007110038118445, -0.03324074249824097,
+0.3939270778216369, -0.03506401846698079, 0.5857110303721015,
+-0.006788487241438284, -0.5815434272915686, -0.01438258684486258;
 
-    // 给定Essential矩阵
-    Matrix3d E;
-    E << -0.0203618550523477, -0.4007110038118445, -0.03324074249824097,
-            0.3939270778216369, -0.03506401846698079, 0.5857110303721015,
-            -0.006788487241438284, -0.5815434272915686, -0.01438258684486258;
+// 待计算的R,t
+Matrix3d R;
+Vector3d t;
 
-    // 待计算的R,t
-    Matrix3d R;
-    Vector3d t;
+// SVD and fix sigular values
+// START YOUR CODE HERE
+Eigen::JacobiSVD<Eigen::Matrix3d> svd(E,ComputeThinU|ComputeThinV);
+Matrix3d V=svd.matrixV(),U=svd.matrixU();
+Matrix3d un_S=U.inverse()* E*V.transpose().inverse(); //类型不要搞混
+//计算后的Sigma矩阵
+double delta_1=un_S(0,0),delta_2=un_S(1,1);
+Matrix3d S = Matrix3d::Zero();
+S(0,0)=(delta_1+delta_2)/2;
+S(1,1)=(delta_1+delta_2)/2;
+// END YOUR CODE HERE
 
-    // SVD and fix sigular values
-    // START YOUR CODE HERE
-    Eigen::JacobiSVD<Eigen::Matrix3d> svd(E,ComputeThinU|ComputeThinV);
-    Matrix3d V=svd.matrixV(),U=svd.matrixU();
-    Matrix3d un_S=U.inverse()* E*V.transpose().inverse(); //类型不要搞混
-    //计算后的Sigma矩阵
-    double delta_1=un_S(0,0),delta_2=un_S(1,1);
-    Matrix3d S = Matrix3d::Zero();
-    S(0,0)=(delta_1+delta_2)/2;
-    S(1,1)=(delta_1+delta_2)/2;
-    // END YOUR CODE HERE
+// set t1, t2, R1, R2 
+// START YOUR CODE HERE
+Matrix3d t_wedge1;
+Matrix3d t_wedge2;
 
-    // set t1, t2, R1, R2 
-    // START YOUR CODE HERE
-    Matrix3d t_wedge1;
-    Matrix3d t_wedge2;
+Matrix3d R1;
+Matrix3d R2;
+// 使用旋转的角度和旋转轴向量（此向量为单位向量）来初始化角轴
+AngleAxisd V1(M_PI / 2, Vector3d(0, 0, 1));
+AngleAxisd V2(- M_PI / 2, Vector3d(0, 0, 1));
 
-    Matrix3d R1;
-    Matrix3d R2;
-    // END YOUR CODE HERE
-    //1.使用旋转的角度和旋转轴向量（此向量为单位向量）来初始化角轴
-    AngleAxisd V1(M_PI / 2, Vector3d(0, 0, 1));
-    AngleAxisd V2(- M_PI / 2, Vector3d(0, 0, 1));
-
-    Matrix3d Rz_pos = V1.toRotationMatrix();
-    Matrix3d Rz_neg = V2.toRotationMatrix();
-    t_wedge1 = U*Rz_pos*S*U.transpose();
-    t_wedge2 = U*Rz_neg*S*U.transpose();
-    R1 = U*Rz_pos*V.transpose();
-    R2 = U*Rz_neg*V.transpose();
-
-    cout << "R1 = " << R1 << endl;
-    cout << "R2 = " << R2 << endl;
-    cout << "t1 = " << Sophus::SO3::vee(t_wedge1) << endl;
-    cout << "t2 = " << Sophus::SO3::vee(t_wedge2) << endl;
-
-    // check t^R=E up to scale
-    Matrix3d tR = t_wedge1 * R1;
-    cout << "t^R = " << tR << endl;
-    return 0;
-}
+Matrix3d Rz_pos = V1.toRotationMatrix();
+Matrix3d Rz_neg = V2.toRotationMatrix();
+t_wedge1 = U*Rz_pos*S*U.transpose();
+t_wedge2 = U*Rz_neg*S*U.transpose();
+R1 = U*Rz_pos*V.transpose();
+R2 = U*Rz_neg*V.transpose();
+// END YOUR CODE HERE
+cout << "R1 = " << R1 << endl;
+cout << "R2 = " << R2 << endl;
+cout << "t1 = " << Sophus::SO3::vee(t_wedge1) << endl;
+cout << "t2 = " << Sophus::SO3::vee(t_wedge2) << endl;
 ```
 
 计算结果：
@@ -356,3 +350,4 @@ t^R =  0.0203619   0.400711  0.0332407
 0.00678849   0.581543  0.0143826
 ```
 
+通过以上结果，可以看出$t^{\wedge}R=-E$,相差了一个乘法因子。
