--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -6,24 +6,43 @@
 
 ### 2.1 光流文献综述 (1 分)
 
-我们课上演示了 Lucas-Kanade 稀疏光流，用 OpenCV 函数实现了光流法追踪特征点。实际上，光流法有很长时间的研究历史，直到现在人们还在尝试用 Deep learning 等方法对光流进行改进 [1, 2]。本题将指导你完成基于 Gauss-Newton 的金字塔光流法。首先，请阅读文献 [3]（paper 目录下提供了 pdf），回答下列问题。
+我们课上演示了 `Lucas-Kanade` 稀疏光流，用 OpenCV 函数实现了光流法追踪特征点。实际上，光流法有很长时间的研究历史，直到现在人们还在尝试用 Deep learning 等方法对光流进行改进 [1, 2]。本题将指导你完成基于 Gauss-Newton 的金字塔光流法。首先，请阅读文献 [3]（paper 目录下提供了 pdf），回答下列问题。
 **问题：**
 
 #### 1. 按此文的分类，光流法可分为哪几类？
 
+答：作者在文中对光流法按照两种不同的方法进行分类。
 
+原文中如下：
 
-#### 2. 在 compositional 中，为什么有时候需要做原始图像的 wrap？该 
+​	One difference between the various approaches is whether they estimate an additive increment to the parameters (the additive approach (Lucas and Kanade, 1981)), or whether they estimate an incremental warp that is then composed with the current estimate of the warp (the compositional approach (Shum and Szeliski, 2000)).
 
-#### wrap 有何物理意义？
+原文第一章最后一段有如下：
 
+​	We categorize algorithms as either additive or compositional, and as either forwards or inverse.
 
+1. 可以看出，此文按照估计的是**参数的叠加增量**还是**增量`Warp`**将光流法分为**叠加法**(`additional`)和**组合**(`compositional`)算法
+2. 按照**Warp更新规则**可以将光流法分为**前向**（`forward`）和**逆向**(`inverse`)两种算法
+
+#### 2. 在 compositional 中，为什么有时候需要做原始图像的 warp？该warp 有何物理意义？
+
+与`Lucas-Kanade` 算法中那样简单地将迭代的更新 $\Delta p$ 添加到当前估计的参数 $p$ 不同，组合（`compositional`）算法中，对扭曲$W(x;\Delta p)$的增量更新必须由`Warp`的当前估计组成 $W(x;p)$。
+
+需要在当前位姿估计之前引入增量式 `warp（incremental warp）`以建立半群约束要求`（the semi-group requirement）`。
+
+原文片段：For more complex warps the composition of the two warps can be more involved (Baker and Matthews, 2001).We therefore have two requirements on the set of warps: (1) the set of warps must contain the identity warp and (2) the set of warps must be closed under composition. The set ofwarps must therefore form a semi-group. This requirement is not very strong. Most warps used in computer vision, including homographies and 3D rotations (Shum and Szeliski, 2000), naturally form semi-groups.
+
+Forward Compositional 的 warp 集合包含 identity warp, warp 集 合 包 含 在Composition 操作上是半群(semi-group), 其中包括 Homograph, 3D rotation 等. Inverse Compositional 也是 semi-group, 另外要求增量 warp 可逆, 其中包括 Homograph, 3D rotation 等, 但不包括 piece wise affine.
 
 #### 3. forward 和 inverse 有何差别？
 
+The only differences between the forwards and inverse compositional algorithms
+(see Figs. 3 and 4) are: (1) the error image is computed after switching the roles of I and T , (2) Steps 3, 5, and 6 use the gradient of T rather than the gradient of I and can be pre-computed, (3) Eq. (35) is used to computep rather than Eq. (10), and finally (4) the incremental warp is inverted before it is composed with the current estimate in Step 9.
 
+正向和逆向组合算法之间的唯一区别是：（1）切换I和T的角色后计算误差图像；（2）步骤3、5和6使用梯度 可以预先计算T的T而不是I的梯度，（3）式。 （35）用于计算p而不是等式。 （10），最后是（4）在将增量扭曲与步骤9中的当前估计值组合之前将其反转。
 
-
+向前方法对于输入图像进行参数化(包括仿射变换及放射增量). 反向方法则同时输入图像参数和模板图像, 其中输入图像参数化仿射变换, 模板图像参数化仿射增量. 因此反向方法的计算量显著降低，计算效率较高.。由于图像灰度值和运动参数非线性, 整个优化过程为非线性。
+`forward`方法和`inverse`方法在目标函数上不太一样，一个是把运动向量 p 都是跟着被匹配图像，但是向前方法中的迭代的微小量 Δp 使用 I 计算，反向方法中的 Δp 使用 T计算，这样计算量便小了。
 
 ## 4 * 使用光流计算视差（2 分，约 1 小时）
 
