--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -374,14 +374,14 @@ $$
 1. 在缩放图像时，图像内参也需要跟着变化。那么，例如图像缩小一倍，$f_x, f_y, c_x, c_y$ 应该如何变化？
 2. 根据 `coarse-to-fine` 的过程，上一层图像的位姿估计结果可以作为下一层图像的初始条件。
 3. 在调试期间，可以画出每个点在 ref 和 cur 上的投影，看看它们是否对应。若准确对应，则说明位
-  姿估计是准确的。
-  作为验证，图像 000001 和 000005 的位姿平移部分应该接近2：
-  t1 = [0.005876, −0.01024, −0.725]T
-  t5 = [0.0394, −0.0592, −3.9907]T
-  (3)
-  可以看出车辆基本是笔直向前开的。
-  2 根据各人实现不同，此题结果可能有所差异，但不应该大于 0.5 米。
-  5
+    姿估计是准确的。
+    作为验证，图像 000001 和 000005 的位姿平移部分应该接近2：
+    t1 = [0.005876, −0.01024, −0.725]T
+    t5 = [0.0394, −0.0592, −3.9907]T
+    (3)
+    可以看出车辆基本是笔直向前开的。
+    2 根据各人实现不同，此题结果可能有所差异，但不应该大于 0.5 米。
+    5
 
 ### 3.3 * 延伸讨论
 
@@ -405,3 +405,37 @@ $$
 请注意本题为附加题。
 在上一题中我们已经实现了金字塔 `LK` 光流。光流有很多用途，它给出了两个图像中点的对应关系，所以我们可以用光流进行位姿估计，或者计算双目的视差。回忆第四节课的习题中，我们介绍了双目可以通过视差图得出点云，但那时直接给出了视差图，而没有进行视差图的计算。现在，给定图像 `left.png`,` right.png`，请你使用上题的结果，计算 `left.png` 中的 `GFTT` 点在 `right.png` 中的（水平）视差，然后与 `disparity.png` 进行比较。这样的结果是一个稀疏角点组成的点云。请计算每个角点的水平视差，然后对比视差图比较结果。
 本程序不提供代码框架，请你根据之前习题完成此内容,
+
+**答:**
+
+视差计算代码如下:
+
+前提:需要把上题的直接法函数代码稍作修改,把追踪到的像素返回
+
+```C++
+//视差计算
+vector<double > disp;
+vector<double > cost;
+for(int i = 0 ;i<pixels_ref.size();i++)
+{
+    double dis =  pixels_ref[i].x()-pixel_right[i].x(); //两点之间的水平视差
+    disp.push_back(dis);
+    //        cout<<"dis: "<<dis<<" "<<GetPixelValue(disparity_img,pixels_ref[i].x(),pixels_ref[i].y())<<endl;
+    cost.push_back(dis-GetPixelValue(disparity_img,pixels_ref[i].x(),pixels_ref[i].y()));
+}
+//计算视差的平均误差
+double sum = accumulate(cost.begin(),cost.end(),0.0);
+cout<<"平均误差:"<<sum/cost.size()<<endl;
+
+```
+
+
+
+使用单层直接法最后得到的平均误差为`-7.02735`:
+
+<img src="曾是少年-第六章作业.assets/image-20200627105959829.png" alt="image-20200627105959829" style="zoom: 67%;" />
+
+使用多层直接法最后的平均误差为:`平均误差:0.223348`
+
+<img src="曾是少年-第六章作业.assets/image-20200627105911354.png" alt="image-20200627105911354" style="zoom: 67%;" />
+
