--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -11,35 +11,58 @@
 
 #### 1. 按此文的分类，光流法可分为哪几类？
 
-答：作者在文中对光流法按照两种不同的方法进行分类。
+**答**：作者在文中对光流法按照两种不同的方法进行分类。
 
 原文中如下：
 
-​	One difference between the various approaches is whether they estimate an additive increment to the parameters (the additive approach (Lucas and Kanade, 1981)), or whether they estimate an incremental warp that is then composed with the current estimate of the warp (the compositional approach (Shum and Szeliski, 2000)).
+```
+	One difference between the various approaches is whether they estimate an additive increment to the parameters (the additive approach (Lucas and Kanade, 1981)), or whether they estimate an incremental warp that is then composed with the current estimate of the warp (the compositional approach (Shum and Szeliski, 2000)).
+```
 
 原文第一章最后一段有如下：
 
-​	We categorize algorithms as either additive or compositional, and as either forwards or inverse.
+```
+	We categorize algorithms as either additive or compositional, and as either forwards or inverse.
+```
 
-1. 可以看出，此文按照估计的是**参数的叠加增量**还是**增量`Warp`**将光流法分为**叠加法**(`additional`)和**组合**(`compositional`)算法
+1. 可以看出，此文按照估计的是**参数的叠加增量**还是**增量`Warp`**将光流法分为**叠加**(`additional`)和**组合**(`compositional`)算法
 2. 按照**Warp更新规则**可以将光流法分为**前向**（`forward`）和**逆向**(`inverse`)两种算法
 
 #### 2. 在 compositional 中，为什么有时候需要做原始图像的 warp？该warp 有何物理意义？
 
-与`Lucas-Kanade` 算法中那样简单地将迭代的更新 $\Delta p$ 添加到当前估计的参数 $p$ 不同，组合（`compositional`）算法中，对扭曲$W(x;\Delta p)$的增量更新必须由`Warp`的当前估计组成 $W(x;p)$。
+**答**: 与`Lucas-Kanade` 算法中那样简单地将迭代的更新 $\Delta p$ 添加到当前估计的参数 $p$ 不同，组合（`compositional`）算法中，对扭曲$W(x;\Delta p)$的增量更新必须由`Warp`的当前估计组成 $W(x;p)$。
 
 需要在当前位姿估计之前引入增量式 `warp（incremental warp）`以建立半群约束要求`（the semi-group requirement）`。
 
-原文片段：For more complex warps the composition of the two warps can be more involved (Baker and Matthews, 2001).We therefore have two requirements on the set of warps: (1) the set of warps must contain the identity warp and (2) the set of warps must be closed under composition. The set ofwarps must therefore form a semi-group. This requirement is not very strong. Most warps used in computer vision, including homographies and 3D rotations (Shum and Szeliski, 2000), naturally form semi-groups.
+原文片段：
 
-Forward Compositional 的 warp 集合包含 identity warp, warp 集 合 包 含 在Composition 操作上是半群(semi-group), 其中包括 Homograph, 3D rotation 等. Inverse Compositional 也是 semi-group, 另外要求增量 warp 可逆, 其中包括 Homograph, 3D rotation 等, 但不包括 piece wise affine.
+```
+For more complex warps the composition of the two warps can be more involved (Baker and Matthews, 2001).We therefore have two requirements on the set of warps: (1) the set of warps must contain the identity warp and (2) the set of warps must be closed under composition. The set ofwarps must therefore form a semi-group. This requirement is not very strong. Most warps used in computer vision, including homographies and 3D rotations (Shum and Szeliski, 2000), naturally form semi-groups.
+```
+
+
+
+`Forward Compositional` 的 `warp` 集合包含 `identity warp`,` warp` 集 合 包 含 在`Composition` 操作上是半群(`semi-group`), 其中包括 `Homograph`,` 3D rotation` 等. `Inverse Compositional` 也是 `semi-group`, 另外要求增量 `warp` 可逆, 其中包括 `Homograph`,`3D rotation` 等, 但不包括 `piece wise affine`.
 
 #### 3. forward 和 inverse 有何差别？
 
-The only differences between the forwards and inverse compositional algorithms
-(see Figs. 3 and 4) are: (1) the error image is computed after switching the roles of I and T , (2) Steps 3, 5, and 6 use the gradient of T rather than the gradient of I and can be pre-computed, (3) Eq. (35) is used to computep rather than Eq. (10), and finally (4) the incremental warp is inverted before it is composed with the current estimate in Step 9.
+**答**: 原文如下:
 
-正向和逆向组合算法之间的唯一区别是：（1）切换I和T的角色后计算误差图像；（2）步骤3、5和6使用梯度 可以预先计算T的T而不是I的梯度，（3）式。 （35）用于计算p而不是等式。 （10），最后是（4）在将增量扭曲与步骤9中的当前估计值组合之前将其反转。
+```
+The only differences between the forwards and inverse compositional algorithms (see Figs. 3 and 4) are: (1) the error image is computed after switching the roles of I and T , (2) Steps 3, 5, and 6 use the gradient of T rather than the gradient of I and can be precomputed, (3) Eq. (35) is used to computep rather than Eq. (10), and finally (4) the incremental warp is inverted before it is composed with the current estimate in Step 9.
+```
+
+正向和逆向组合算法之间的唯一区别是：
+
+1. 切换 I 和 T 的角色后计算误差图像；
+
+2. 步骤3、5和6使用梯度 可以预先计算T的T而不是I的梯度，
+
+3. 式.35 用于计算p而不是等式(10)。 
+
+4. 在将增量扭曲与步骤9中的当前估计值组合之前将其反转。
+
+
 
 向前方法对于输入图像进行参数化(包括仿射变换及放射增量). 反向方法则同时输入图像参数和模板图像, 其中输入图像参数化仿射变换, 模板图像参数化仿射增量. 因此反向方法的计算量显著降低，计算效率较高.。由于图像灰度值和运动参数非线性, 整个优化过程为非线性。
 `forward`方法和`inverse`方法在目标函数上不太一样，一个是把运动向量 p 都是跟着被匹配图像，但是向前方法中的迭代的微小量 Δp 使用 I 计算，反向方法中的 Δp 使用 T计算，这样计算量便小了。
@@ -55,22 +78,28 @@ $$
 
 即最小化二者灰度差的平方，其中 $\sum_W$表示我们在某个窗口（Window）中求和（而不是单个像素，因为问题有两个未知量，单个像素只有一个约束，是欠定的）。实践中，取此 `window` 为 `8×8` 大小的小块，即从 $x_i − 4$ 取到 $x_i + 3$，`y` 坐标亦然。显然，这是一个 `forward-addtive` 的光流，而上述最小二乘问题可以用 `Gauss-Newton` 迭代求解。请回答下列问题，并根据你的回答，实现 `code/optical_flow.cpp` 文件中的`OpticalFlowSingleLevel` 函数。
 
+---
+
 #### 1. 从最小二乘角度来看，每个像素的误差怎么定义？
 
-**答:**
+**答:** 第(x,y)的像素的误差定义如下:
 $$
-e_i=I_1 (x_i,y_i) − I_2 (x_i + ∆x_i, y_i + ∆y_i)
+\begin{aligned}
+e & = I_1 (x,y) − I_2 (x + ∆x, y + ∆y)\\
+\end{aligned}
 $$
+
+其中, $I_1(x,y)$是像素点$(x,y)$在图1中的灰度, $I_2(x+\Delta x,y+\Delta y)$是在图二对应像素点的灰度
 
 #### 2. 误差相对于自变量的导数如何定义？
 
 **答:**
 $$
-\frac{\partial e}{\partial \Delta x}=-(\frac{\partial I_2(x_i + ∆x_i, y_i + ∆y_i)}{\partial \Delta x})
+\frac{\partial e}{\partial \Delta x}=-(\frac{\partial I_2(x + ∆x, y + ∆y)}{\partial \Delta x})
 $$
 
 $$
-\frac{\partial e}{\partial \Delta y}=-(\frac{\partial I_2(x_i + ∆x, y_i + ∆y)}{\partial \Delta y})
+\frac{\partial e}{\partial \Delta y}=-(\frac{\partial I_2(x + ∆x, y + ∆y)}{\partial \Delta y})
 $$
 实践中的计算过程如下:
 
@@ -146,6 +175,8 @@ dy += update[1];
 
 我们为 `OpticalFlowSingleLevel` 函数添加一个 `bool inverse` 参数，指定要使用正常的算法还是反向的算法。请你根据上述说明，完成反向的 `LK` 光流法。
 
+---
+
 **答:**
 $$
 error = I_2(x,y)-I_1(x-dx,y-dy)
@@ -166,7 +197,7 @@ J(1) = -0.5*(GetPixelValue(img1,kp.pt.x + x , kp.pt.y + y + 1) - GetPixelValue(i
 
 <img src="曾是少年-第六章作业.assets/T_SingleLevel-1593077169405.jpg" alt="T_SingleLevel" style="zoom:50%;" />
 
-刻意看出,效果还不错;
+可以看出,效果不错;
 
 ### 2.4 推广至金字塔（2 分）
 
@@ -240,7 +271,7 @@ for(int level = pyramids-1;level>=0;level--)
 }
 ```
 
-4. 把提取到的特征都添加到kp2中.
+4. 把提取到的特征都添加到`kp2`中.
 
 ```C++
 for(auto &kp:kp2_pyr)
@@ -276,15 +307,13 @@ for(auto &kp:kp2_pyr)
 
 #### 2. 光流法中的金字塔用途和特征点法中的金字塔有何差别？
 
-**答**:
-
-光流法中的金字塔是逐层迭代寻找最佳的关键点位置和光流方向，目的是解决光流在运动过程中难以检测的问题，或者说图像运动过快导致跟踪不上的问题。
+**答**: 光流法中的金字塔是逐层迭代寻找最佳的关键点位置和光流方向，目的是解决光流在运动过程中难以检测的问题，或者说图像运动过快导致跟踪不上的问题。
 
 特征点法中的金字塔是通过逐层检测特征点来增加尺度描述，有时候图像从远处看是一个特征点，但是近看可能不是，所以特征点法用金字塔目的是解决特征点的尺度不变性问题
 
+
+
 提示：你可以使用上面写的单层光流来帮助你实现多层光流。
-
-
 
 ### 2.5 讨论
 
@@ -292,11 +321,10 @@ for(auto &kp:kp2_pyr)
 
 #### 1. 我们优化两个图像块的灰度之差真的合理吗？哪些时候不够合理？你有解决办法吗？
 
-**答**: 光流法有三个基本的假设：
-a. 灰度不变假设，即同一个空间点的像素灰度值在各个图像中固定不变，看似不太合理，但是当帧率输出较快，两张图像非常接近时，这种假设也凑合；
-b. 小运动假设；
+**答**: 光流法拥有三个**基本的假设**：
+a. 灰度不变假设，即同一个空间点的像素灰度值在各个图像中固定不变，看似不太合理，但是当帧率输出较快，两张图像非常接近时，这种假设也能吻合；因此光流法易受外界光照的影响, 针对与灰度变化的情况,可以对相机进行光度模型标定来解决这个问题
+b. 小运动假设, 即光流法追踪特征要求运动不能太大, 当相机发生大尺度或旋转时**容易产生局部极值**，跟踪效果不好,通常的解决办法可以用金字塔的方法改善局部极值，用组合光流法（增加旋转描述）可以改善旋转问题。；
 c. 局部一致性假设。
-其中，基于灰度不变假设容易受外界光照的影响。解决办法可以对相机进行光度模型标定相机发生大尺度或旋转时容易产生局部极值，跟踪效果不好，通常的解决办法可以用金字塔的方法改善局部极值，用组合光流法（增加旋转描述）可以改善旋转问题。
 
 #### 2. 图像块大小是否有明显差异？取 `16x16` 和 `8x8` 的图像块会让结果发生变化吗？
 
@@ -367,21 +395,47 @@ $$
 2. 由于相机运动，参考图像中的点可能在投影之后，跑到后续图像的外部。所以最后的目标函数要对投影在内部的点求平均误差，而不是对所有点求平均。程序中我们以 good 标记出投影在内部的点。
 3. 单层直接法的效果不会很好，但是你可以查看每次迭代的目标函数都会下降。
 
+
+
 ### 3.2 多层直接法（2 分）
 
 下面，类似于光流，我们也可以把直接法以 `coarse-to-fine` 的过程，拓展至多层金字塔。多层金字塔的直接法允许图像在发生较大运动时仍能追踪到所有点。下面我们使用缩放倍率为 2 的四层金字塔，实现金字塔上的直接法。请实现`DirectPoseEstimationMultiLayer` 函数，下面是一些提示：
 
 1. 在缩放图像时，图像内参也需要跟着变化。那么，例如图像缩小一倍，$f_x, f_y, c_x, c_y$ 应该如何变化？
 2. 根据 `coarse-to-fine` 的过程，上一层图像的位姿估计结果可以作为下一层图像的初始条件。
-3. 在调试期间，可以画出每个点在 ref 和 cur 上的投影，看看它们是否对应。若准确对应，则说明位
-    姿估计是准确的。
+3. 在调试期间，可以画出每个点在 ref 和 cur 上的投影，看看它们是否对应。若准确对应，则说明位姿估计是准确的。
     作为验证，图像 000001 和 000005 的位姿平移部分应该接近2：
-    t1 = [0.005876, −0.01024, −0.725]T
-    t5 = [0.0394, −0.0592, −3.9907]T
-    (3)
-    可以看出车辆基本是笔直向前开的。
-    2 根据各人实现不同，此题结果可能有所差异，但不应该大于 0.5 米。
-    5
+    $t1 = [0.005876, −0.01024, −0.725]^T$
+    $t5 = [0.0394, −0.0592, −3.9907]^T$
+    可以看出车辆基本是笔直向前开的。根据各人实现不同，此题结果可能有所差异，但不应该大于 0.5 米。
+
+**结果**:
+
+![image-20200627113535943](曾是少年-第六章作业.assets/image-20200627113535943.png)
+
+多层光流结果如下:
+
+(1)
+
+![image-20200627113931032](曾是少年-第六章作业.assets/image-20200627113931032.png)
+
+(2)
+
+![image-20200627113623569](曾是少年-第六章作业.assets/image-20200627113623569.png)
+
+(3)
+
+![image-20200627113716816](曾是少年-第六章作业.assets/image-20200627113716816.png)
+
+(4)
+
+![image-20200627113751501](曾是少年-第六章作业.assets/image-20200627113751501.png)
+
+(5)
+
+![image-20200627113817809](曾是少年-第六章作业.assets/image-20200627113817809.png)
+
+![image-20200627113535943](曾是少年-第六章作业.assets/image-20200627113535943.png)
 
 ### 3.3 * 延伸讨论
 
