--- a/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
+++ b/ch6 直接法视觉里程计/作业/曾是少年-第六章作业.md
@@ -315,6 +315,8 @@ for(auto &kp:kp2_pyr)
 
 提示：你可以使用上面写的单层光流来帮助你实现多层光流。
 
+
+
 ### 2.5 讨论
 
 现在你已经自己实现了光流，看到了基于金字塔的 `LK`光流能够与`OpenCV` 达到相似的效果（甚至更好）。根据光流的结果，你可以和上讲一样，计算对极几何来估计相机运动。下面针对本次实验结果，谈谈你对下面问题的看法：
@@ -328,24 +330,26 @@ c. 局部一致性假设。
 
 #### 2. 图像块大小是否有明显差异？取 `16x16` 和 `8x8` 的图像块会让结果发生变化吗？
 
-**答**: 当采用了金字塔的方法时，窗口固定，将图像生成金字塔过程中，在每一层金字塔上都用同一个大小的窗口来进行光流计算，这样很好的去解决了图像块的问题，这样一来图像块大小并不会带来明显差异。当没有采用金字塔方法时。当窗口较大时，光流计算更鲁棒，当窗口较小时，光流计算更正确。原因在于，当图像中每一个部分的运动都不一致的时候如果开的窗口过大，很容易违背窗口(邻域)内的所有点光流一致的基本假设，这可能与实际不一致，所以窗口小，包含的像素少，更精确些。
+**答**: 
+
+当采用了金字塔的方法时，窗口固定，将图像生成金字塔过程中，在每一层金字塔上都用同一个大小的窗口来进行光流计算，这样很好的去解决了图像块的问题，这样一来图像块大小并不会带来明显差异。
+
+当没有采用金字塔方法时。当窗口较大时，光流计算更鲁棒，当窗口较小时，光流计算更正确。原因在于，当图像中每一个部分的运动都不一致的时候如果开的窗口过大，很容易违背窗口(邻域)内的所有点光流一致的基本假设，这可能与实际不一致，所以窗口小，包含的像素少，更精确些。
+
+
 
 #### 3. 金字塔层数对结果有怎样的影响？缩放倍率呢？
 
 **答**: 金字塔层数一般越多效果越好，但是一般图像大于4~5层之后都变得太小，特征点像素太过紧密容易出现错误追踪。放大倍率的话，放大倍率小，金字塔的层数可以增加，迭代层数增多，效果可以变得更好。
+
+
 
 ## 三 直接法
 
 ### 3.1 单层直接法（3 分）
 
 我们说直接法是光流的直观拓展。在光流中，我们估计的是每个像素的平移（在 additive 的情况下）。
-而在直接法当中，我们最小化光流误差，来估计相机的旋转和平移（以李代数的形式）。现在我们将使用和
-前一个习题非常相似的做法来实现直接法，请同学体现二者之间的紧密联系。
-本习题中，你将使用 Kitti 数据集中的一些图像。给定 `left.png` 和 `disparity.png`，我们知道，通过这两个
-图可以得到 `left.png` 中任意一点的 `3D` 信息。现在，请你使用直接法，估计图像 `000001.png` 至 `000005.png`
-的相机位姿。我们称 `left.png` 为参考图像（`reference`，简称 `ref`），称 `000001.png` -`000005.png` 中任意一图
-为当前图像（`current`，简称 `cur`），如图2 所示。设待估计的目标为 `Tcur`,`ref`，那么在 ref 中取一组点 ${p_i}$，
-位姿可以通过最小化下面的目标函数求解：
+而在直接法当中，我们最小化光流误差，来估计相机的旋转和平移（以李代数的形式）。现在我们将使用和前一个习题非常相似的做法来实现直接法，请同学体现二者之间的紧密联系。本习题中，你将使用 Kitti 数据集中的一些图像。给定 `left.png` 和 `disparity.png`，我们知道，通过这两个图可以得到 `left.png` 中任意一点的 `3D` 信息。现在，请你使用直接法，估计图像 `000001.png` 至 `000005.png` 的相机位姿。我们称 `left.png` 为参考图像（`reference`，简称 `ref`），称 `000001.png` -`000005.png` 中任意一图为当前图像（`current`，简称 `cur`），如图2 所示。设待估计的目标为 `Tcur`,`ref`，那么在 ref 中取一组点 ${p_i}$， 位姿可以通过最小化下面的目标函数求解：
 $$
 T_{cur,ref} =\frac{1}{N}\sum^N_{i=1}\sum_{Wi}
 ||I_{ref}(π(p_i)) − I_{cur}(π (T_{cur,ref }p_i))||^2_2
@@ -386,8 +390,11 @@ $$
 \end{aligned}
 $$
 
-
 #### 3. 窗口可以取多大？是否可以取单个点？
+
+**答**
+
+
 
 下面是一些实现过程中的提示：
 
